objects/Customer_Promotion_Eligibility__c.object
<CustomObject>
    <description>Used to identify qualifying accounts for a given promotion.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Promotion Eligibility</relationshipLabel>
        <relationshipName>Customer_Promotion_Eligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <externalId>true</externalId>
        <label>Promotion Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPAccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Number__c</fullName>
        <description>Service Number for Custom Promotion Eligibility ONLY</description>
        <label>Service Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Customer Promotion Eligibility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Active__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>SAPAccountNumber__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPE-{0000}</displayFormat>
        <label>Customer Promo Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Promotion Eligibility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>